grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: grafana
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    app: grafana
status:
  loadBalancer: {}
